<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:fillViewport="true"
    tools:context=".Registro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="20dp"
            android:layout_marginTop="40dp" >

            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/title"
                android:layout_width="220dp"
                android:layout_height="64dp"
                android:layout_marginLeft="10dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:paddingHorizontal="20dp">

            <TextView
                android:id="@+id/txtDescripcionApp"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:gravity="center"
                android:text="@string/msj_registro"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pu_nombre"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginBottom="4dp" />

            <EditText
                android:id="@+id/etxtNombre"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/edittext_login"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:paddingStart="12dp"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/txtApellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pu_apellido"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginBottom="4dp" />

            <EditText
                android:id="@+id/etxtApellido"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/edittext_login"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:paddingStart="12dp"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/txtCorreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pu_correo"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginBottom="4dp" />

            <EditText
                android:id="@+id/etxtCorreo"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/edittext_login"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:paddingStart="12dp"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/txtTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pu_numero"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginBottom="4dp" />

            <EditText
                android:id="@+id/etxtTelefono"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/edittext_login"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:paddingStart="12dp"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/txtContraseña"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pu_contraseña"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginBottom="4dp" />

            <EditText
                android:id="@+id/etxtContraseña"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/edittext_login"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:paddingStart="12dp"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/txtReContraseña"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pu_recontraseña"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginBottom="4dp" />

            <EditText
                android:id="@+id/etxtReContraseña"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/edittext_login"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:paddingStart="12dp"
                android:layout_marginBottom="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="40dp"
            android:paddingHorizontal="20dp">

            <CheckBox
                android:id="@+id/checkTerminos"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:text="@string/chb_terminos_condiciones"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:paddingHorizontal="20dp">

            <Button
                android:id="@+id/btnRegistro"
                android:layout_width="265dp"
                android:layout_height="70dp"
                android:text="@string/btn_registro"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:backgroundTint="@color/skyblue"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp"
                android:layout_marginBottom="16dp" />

            <Button
                android:id="@+id/btnLoginGoogle"
                android:layout_width="265dp"
                android:layout_height="70dp"
                android:text="@string/btn_singUpGoogle"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:backgroundTint="@color/white"
                app:icon="@drawable/google"
                app:iconGravity="start"
                app:iconSize="35dp"
                app:iconTint="@null"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>