<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context=".Recuperacion_contrasena">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="188dp"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDescripcionRecuperarContraseña"
        android:layout_width="344dp"
        android:layout_height="105dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="332dp"
        android:gravity="center"
        android:text="@string/msj_recuperarContraseña"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="298dp"
        android:layout_height="82dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="484dp"
        android:background="@drawable/edittext_login"
        android:ems="10"
        android:hint="@string/correo"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="249dp"
        android:layout_height="69dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="620dp"
        android:gravity="center"
        android:text="@string/btn_enviar"
        android:textSize="25sp"
        android:visibility="visible"
        app:backgroundTint="@color/skyblue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>